--- a/kevin23.html
+++ b/kevin23.html
@@ -8,9 +8,6 @@
 <body>
 </body>
 <!--colocar 5 etiquetas img en su documento HTML-->
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQhwiNqfONX23E4R0Kag1_dqYgZoENGigiy0Q&s"width="15%">
-<img src="https://oechsle.vtexassets.com/arquivos/ids/16636746/2460305.jpg?v=638339499671000000"width="15%">
-<img src="https://assets.adidas.com/images/h_840,f_auto,q_auto,fl_lossy,c_fill,g_auto/b0b6d4a107ad4e84b3baaf8700866f07_9366/Zapatillas_Campus_00s_Verde_H03472_01_standard.jpg"width="15%">
-<img src="https://assets.adidas.com/images/w_600,f_auto,q_auto/eea4a4e9ad3a4ac08cb6ae2a012dab40_9366/Zapatillas_adidas_Grand_Court_TD_Lifestyle_Court_Casual_Blanco_GW9252_01_standard.jpg"width="15%">
-<img src="https://assets.adidas.com/images/w_600,f_auto,q_auto/0e85debf0fc94d7c90d67aa137febff9_9366/Zapatillas_Advantage_Blanco_GZ5300.jpg"width="15%">
+
 </html>
+<h1 style ="color:blue;font-50px;"Hoy tengo clases em certus></h1>
