--- a/kevin23.html
+++ b/kevin23.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-PE">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marcas de zapatillas mas caras de mundo</title>
 </head>
 <body>
+    <h1 style ="color:rgb(0, 255, 98);font-50px;"Hoy tengo clases em certus></h1>
+   <!--Cuando se habla de estilos ,ya se habla de css--> 
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
 </body>
-<!--colocar 5 etiquetas img en su documento HTML-->
 
 </html>
-<h1 style ="color:blue;font-50px;"Hoy tengo clases em certus></h1>
